apps/twofauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twofauth
  namespace: twofauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: twofauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: twofauth
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: twofauth
          image: 2fauth/2fauth:6.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /2fauth
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: twofauth-data
