apps/twofauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twofauth
  namespace: twofauth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: twofauth
  ports:
    - name: http
      port: 80
      targetPort: http
