apps/twofauth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twofauth
  namespace: twofauth
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.alpha.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: twofauth.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twofauth
                port:
                  number: 80
  tls:
    - secretName: twofauth-tls
      hosts:
        - twofauth.${delegating_domain}
